--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Press Start 2P font utility */
-.press-start {
+.press-start-2p-regular {
 	font-family: 'Press Start 2P', 'Courier New', monospace;
 }
 
