--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Press Start 2P font utility */
-.press-start-2p-regular {
+ h1{
 	font-family: 'Press Start 2P', system-ui;
        font-weight: 400;
        font-style: normal;
