--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* Press Start 2P font utility */
-h1{
+body{
 	font-family: 'Press Start 2P', system-ui;
        font-weight: 400;
        font-style: normal;
 }
+
 
