--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 /* Press Start 2P font utility */
 body{
 	font-family: 'Press Start 2P', system-ui;
-       font-weight: 400;
-       font-style: normal;
+       height: 100dvh;
+       margin:0;
+       
 }
+
 
 
