--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body{
        flex-direction: column;
        align-items: center;
        background-color: #111;
-       
+       color:rgba(255, 255, 255, 0.87);
+
        
 }
 
