--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,11 @@ body{
        
 }
 .gameArea{
-       /* insallah kalke theke suru hobe  */
+       position:absolute;
+       width:600px;
+       height:400px;
+       
+
 }
 
 
