--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
        position:absolute;
        width:600px;
        height:400px;
+       background:rgba(255, 255, 255, 0.87);
        
 
 }
