--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,16 @@ body{
        position:absolute;
        width:600px;
        height:400px;
-       background:rgba(255, 255, 255, 0.87);
-       
+       background:rgba(7, 26, 49, 0.6);
+       top:182px;
+
 
 }
-
+.bg{
+       position: absolute;
+       height:1000px;
+       z-index:-1;
+       
+}
 
 
