--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body{
        height:400px;
        background:rgba(7, 26, 49, 0.6);
        top:182px;
+       border:#919bbec7 10px solid ;
 
 
 }
@@ -25,7 +26,7 @@ body{
        position: absolute;
        height:1000px;
        z-index:-1;
-       
+
 }
 
 
