--- a/styles.css
+++ b/styles.css
@@ -31,5 +31,11 @@ body{
        z-index:-1;
 
 }
+.paddle{
+       height:100px;
+       width:20px;
+       background: rgba(255, 255, 255, 0.9);
+       position: absolute;
+}
 
 
