--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,16 @@ body{
        position: absolute;
        top:150px;
 }
+paddle2{
+       right:0px;
+}
+.ball {
+       position:absolute;
+       height:20px;
+       width: 20px;
+       background: rgba(255, 255, 255, 0.9);
+       border-radius: 2px;
+}
 
 
 
