--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,16 @@ paddle2{
        width: 20px;
        background: rgba(255, 255, 255, 0.9);
        border-radius: 2px;
+       left:290px;
+       top:190px;
+
+}
+.net{
+       position:absolute;
+       border-right:8px rgba(255, 255, 255, 0.3) dotted;
+       height: 96%;
+       left:calc(50% - 4px);
+
 }
 
 
