--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ paddle2{
        border-radius: 2px;
        left:290px;
        top:190px;
+       box-shadow: 4px 10px 4px rgba(0, 0, 0, 0.9);
 
 }
 .net{
@@ -56,7 +57,21 @@ paddle2{
        border-right:8px rgba(255, 255, 255, 0.3) dotted;
        height: 96%;
        left:calc(50% - 4px);
+       top:2%;
 
+}
+.title{
+       position: absolute;
+       top:88px;
+       font-size:26px;
+
+}
+.score{
+       position: absolute;
+       top:88px;
+       display: flex;
+       height:60px;
+       
 }
 
 
