--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,10 @@ body{
        left:50%;
        transform: translate(-50%, -50%);
        text-align: center;
+       background: #222;
+       border-radius:4px;
+       padding:10px;
+       
 }
 
 
