--- a/styles.css
+++ b/styles.css
@@ -92,8 +92,19 @@ body{
        background: #222;
        border-radius:4px;
        padding:10px;
-       
+
 }
+
+.vignette{
+       height:100dvh;
+       width:100dvw;
+       background: radio-gradient(
+              circle,
+              rgba(0,0,0,0) 50%,
+       );
+}
+
+
 
 
 
