--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ body{
        background: radio-gradient(
               circle,
               rgba(0,0,0,0) 50%,
+              rgba(0,0,0,1) 100%
        );
 }
 
