--- a/styles.css
+++ b/styles.css
@@ -68,18 +68,21 @@ body{
 }
 .score{
        position: absolute;
-       top:88px;
+       top:160px;
        display: flex;
        height:60px;
        justify-content: center;
        align-items: center;
+       color:#fff;
+       font-size:20px;
+       z-index:2;
 
 }
 .player1score {
-       left:calc(50% -200px);
+       left:calc(50% -140px);
 }
 .player2score {
-       left:calc(50% + 120px);
+       left:calc(50% + 140px);
 }
 .startText{
        position:absolute;
